--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^1.2.0-beta.6",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12"
   },
@@ -20,8 +21,13 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-vue": "^8.2.0",
+    "node-sass": "^7.0.0",
     "prettier": "^2.5.1",
+    "sass": "^1.45.1",
+    "sass-loader": "^12.4.0",
     "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.5.4",
+    "unplugin-vue-components": "^0.17.10",
     "vite": "^2.7.2",
     "vite-plugin-svg-icons": "^1.0.5",
     "vue-tsc": "^0.29.8"
