--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-vue-jsx": "^1.3.3",
+    "animate.css": "^4.1.1",
     "element-plus": "^1.2.0-beta.6",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12"
@@ -26,6 +28,7 @@
     "sass": "^1.45.1",
     "sass-loader": "^12.4.0",
     "typescript": "^4.5.4",
+    "typescript-plugin-css-modules": "^3.4.0",
     "unplugin-auto-import": "^0.5.4",
     "unplugin-vue-components": "^0.17.10",
     "vite": "^2.7.2",
